--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
