add sticky-notes page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["redireccionar", "renderizado", "sobreingenieria", "WCAG"]
+	"cSpell.words": [
+		"redireccionar",
+		"renderizado",
+		"rerenderizaciones",
+		"sobreingenieria",
+		"tipado",
+		"WCAG"
+	]
 }
