add images for projects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
 	"cSpell.words": [
+		"Coroshop",
+		"mantenibles",
 		"redireccionar",
 		"renderizado",
 		"rerenderizaciones",
 		"sobreingenieria",
+		"testeables",
+		"testear",
 		"tipado",
 		"WCAG"
 	]
