--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-simple-typewriter": "^4.0.5"
+    "react-simple-typewriter": "^4.0.5",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
