--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emailjs/browser": "^3.9.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^7.6.1",
+    "i18next": "^22.0.4",
     "next": "12.3.1",
+    "next-i18next": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
