add internationalization to web access page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"Coroshop",
 		"mantenibles",
 		"redireccionar",
+		"renderizaciones",
 		"renderizado",
 		"rerenderizaciones",
 		"sobreingenieria",
