--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^22.0.4",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
