--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
     "@react-three/drei": "^9.57.0",
-    "@react-three/fiber": "^8.11.6",
-    "@react-three/postprocessing": "^2.7.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "framer-motion": "^7.6.1",
     "i18next": "^22.0.4",
-    "maath": "^0.5.2",
     "next": "12.3.1",
     "next-i18next": "^12.1.0",
     "next-themes": "^0.2.1",
@@ -24,8 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-simple-typewriter": "^4.0.5",
-    "react-toastify": "^9.1.1",
-    "three": "^0.150.1"
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
